# brewblox-ctl

./: README.md  bootstrap-install.sh  pyproject.toml  release.sh
.github/workflows/: build.yml
brewblox_ctl/: __main__.py  actions.py  auth_users.py  const.py  discovery.py  migration.py  models.py  tabular.py  testing.py  utils.py
brewblox_ctl/commands/: add_service.py  auth.py  backup.py  database.py  diagnostic.py  docker.py  experimental.py  fix.py  flash.py  install.py  service.py  snapshot.py  update.py
brewblox_ctl/deployed/: brewblox-ctl
brewblox_ctl/templates/: docker-compose.shared.yml.j2  traefik-static.yml.j2
test/: conftest.py  test_actions.py  test_auth_users.py  test_click_helpers.py  test_discovery.py  test_migration.py  test_testing.py
test/commands/: test_add_service.py  test_backup.py  test_configuration.py  test_database.py  test_diagnostic.py  test_docker.py  test_experimental.py  test_flash.py  test_install.py  test_service.py  test_snapshot.py  test_tools.py  test_update.py
